# ml-algorithms-from-scratch

./: README.md
decision-tree/: README.md
decision-tree/src/: decision_tree.py  test.ipynb
decision_forest/: README.md
decision_forest/data/: churn_data.csv
decision_forest/src/: decision_tree.py  id3.py  test.ipynb
decision_tree/: README.md
decision_tree/src/: decision_tree.py  id3.py  node.py  test.ipynb
k-means/: README.md
k-means/src/: k_means.py  test.ipynb
k-nearest-neighbors/: README.md
k-nearest-neighbors/src/: k_nearest_neighbors.py
k_means/: README.md
k_means/src/: k_means.py  test.ipynb
k_nearest_neighbors/: README.md
k_nearest_neighbors/src/: k_nearest_neighbors.py  test.ipynb
linear-regression/: README.md
linear-regression/src/: linear_regression_parameters.py  linear_regression_utils.py
linear_regression/: README.md
linear_regression/.ipynb_checkpoints/: linear_regression-checkpoint.ipynb  linear_regressor-checkpoint.py
linear_regression/src/: linear_regressor.py  parameters.py  test.ipynb
logistic-regression/: README.md
logistic-regression/.ipynb_checkpoints/: logistic_regression-checkpoint.ipynb
logistic_regression/: README.md
naive-bayes/: README.md
naive_bayes/: README.md
rbf-net-and-reg-net/: .gitignore  pyproject.toml
rbf-net-and-reg-net/docs/: refs.txt
rbf-net-and-reg-net/src/rbf_net_and_reg_net/: logger.py  main.py  rbf_net.py  reg_net.py  tasks.py  utils.py
rbf-net-and-reg-net/src/rbf_net_and_reg_net/log/: results.txt
self-organizing-map/: README.md
self_organizing_map/: README.md
(+15 files in other folders)
